--- a/doc/history.1
+++ b/doc/history.1
@@ -1,6 +1,11 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \- History For AdvanceCOMP
+.SH ADVANCECOMP VERSION 2.5 2023/01 
+.PD 0
+.IP \(bu
+Fix segmentation fault on invalid MNG size
+.PD
 .SH ADVANCECOMP VERSION 2.4 2022/11 
 .PD 0
 .IP \(bu
