--- a/doc/history.txt
+++ b/doc/history.txt
@@ -3,6 +3,12 @@
                             =======================
 
 
+ADVANCECOMP VERSION 2.5 2023/01
+===============================
+
+* Fix segmentation fault on invalid MNG size
+
+
 ADVANCECOMP VERSION 2.4 2022/11
 ===============================
 
